# celeri-remoulade

./: Cargo.toml  README.md
data/track/track_data/e00/d00/: e000000c.au  e00003c3.au  e0000bbd.au  e0000c40.au
lib/: anim.rs  camera.rs  device.rs  entity.rs  lib.rs  objects.rs  projection.rs  texture.rs  transform.rs  window.rs
release/: release.txt
src/: demo.rs  gui.rs  main.rs  procedural.rs
src/parts/: ashes.rs  lines.rs  mod.rs  mountains.rs  spark.rs
src/shaders/: ashes.rs  bloom.rs  blur.rs  chess.rs  chromatic_aberration.rs  const_color.rs  copy.rs  gui_const_color.rs  lines.rs  lines_pp.rs  mod.rs  quad_tex.rs  skybox.rs  spark.rs
track/: evoke16.xrns  track.aup
track/track_data/e00/d00/: e0000050.au  e000030b.au  e00003e6.au  e000048e.au  e00004ac.au  e00009c7.au
