[package]
name = "evoke16"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]

[lib]
name = "ion"
path = "lib/lib.rs"
doc = true

[features]
# No feature by default.
default = ["debug_camera"]
# Switch on to enable debugging camera (freefly)
debug_camera = []

[dependencies]
luminance = "0.6.0"
luminance-gl = "0.5.0"
gl = "0.5.2"
glfw = "0.3.0"
#nalgebra = "0.8.2"
nalgebra = { path = "../nalgebra" }
# rustc-serialize = "0.3.18"
time = "0.1.35"
