[package]
name = "evoke16"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]

[lib]
name = "ion"
path = "lib/lib.rs"
doc = true

[features]
# No feature by default.
default = ["debug_camera"]
# Switch on to enable debugging camera (freefly)
debug_camera = []

[dependencies]
luminance = "0.6.0"
luminance-gl = "0.5.0"
gl = "0.5.2"
glfw = "0.3.0"
nalgebra = { git = "https://github.com/phaazon/nalgebra.git", rev = "1fdd8979afa464d1a13d0bfe926e0d9aaab0ee1a" }
openal-rs = "0.1.4"
vorbis = "0.0.14"

[dev-dependencies]
rand = "0.3.14" # for unit tests
