[package]
name = "evoke16"
version = "0.1.0"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]

[lib]
name = "ion"
path = "lib/lib.rs"
doc = true

[features]
# No feature by default.
default = ["release"]
release = [] # enable this for release
record = [] # enable this to record the demo to disk (in the local record/ folder)

[dependencies]
luminance = "0.6.3"
luminance-gl = "0.5.4"
gl = "0.5.2"
glfw = { version = "0.9.1", default-features = false }
image = "0.10.1"
nalgebra = { git = "https://github.com/phaazon/nalgebra.git", rev = "1fdd8979afa464d1a13d0bfe926e0d9aaab0ee1a" }
openal-rs = "0.1.4"
vorbis = "0.0.14"
time = "*"

[dev-dependencies]
rand = "0.3.14" # for unit tests
